fixed some layout issue

--- a/dashboard1.css
+++ b/dashboard1.css
@@ -19,8 +19,8 @@
     --main-dashboard-content-wrapper-bg: #fafafb;
     --change-location-border-color: #d3d3d3;
     --notifs-red-color: #ff4343;
-    --events-wrapper-selected-color: rgba(253,196,196,1);
-    --events-wrapper-not-selected-color: rgba(253,196,196, 0.4);
+    --events-wrapper-selected-color: #fdc4c4;
+    --events-wrapper-not-selected-color: #e6e0fd;
     --sidebar-width: 100px;
     --sidebar-width-mini: 65px;
     font-size: 16px;
@@ -545,7 +545,7 @@ body {
 
 .main-graph-wrapper {
   width: 100%;
-  
+  min-width: 600px;
   display: flex;
 
 }
@@ -955,9 +955,9 @@ body {
   margin-bottom: 30px;
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   border-left: 6px solid var(--events-wrapper-not-selected-color);
-  background: white;
+  background: var(--main-dashboard-content-wrapper-bg);
 }
 
 .event-name-date-wrapper {
@@ -972,6 +972,7 @@ body {
   font-weight: 600;
   text-transform: uppercase;
   margin-bottom: 8px;
+  color: var(--start-now-bg);
 }
 
 .event-date {
@@ -979,6 +980,7 @@ body {
   font-family: 'Gilroy-Medium', sans-serif ;
   font-weight: 500;
   text-transform: uppercase;
+  color: var(--start-now-bg);
 }
 
 .event-selected {
@@ -991,6 +993,8 @@ body {
   font-family: 'Gilroy-Medium', sans-serif;
   font-weight: 500;
   opacity: 0.7;
+  transform: translateY(-10px);
+  color: var(--start-now-bg);
 }
 
 .help-wrapper {
@@ -1032,6 +1036,38 @@ body {
     
   }
 
+  .main-graph-wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    
+    
+  }
+  
+  .graph-wrapper-left {
+    flex: 1  0 auto;
+    height: 450px;
+    display: flex;
+    flex-direction: column;
+    
+  }
+  
+  .graph-left-common-wrapper {
+    height: 50%;
+    width: 100%;
+    display: flex;
+   
+  }
+  
+  .graph-wrapper-right {
+    flex: 1 0 auto;
+    height: 250px;
+    margin-top: 25px;
+    margin-right: 25px;
+  }
+
+  
+
 
 }
 
@@ -1040,6 +1076,12 @@ body {
 @media only screen and (max-width: 1150px) { 
   :root {
     font-size: 9px;
+  }
+
+  .main-sub-dashboard-content-wrapper {
+   
+    padding: 20px;
+    
   }
 
   .sidebar-psuedo {
@@ -1055,32 +1097,6 @@ body {
 
 }
 
-.main-graph-wrapper {
-  width: 100%;
-  
-  display: flex;
-  flex-direction: column;
-  
-}
 
-.graph-wrapper-left {
-  flex: 1  0 auto;
-  height: 450px;
-  display: flex;
-  flex-direction: column;
-  
-}
-
-.graph-left-common-wrapper {
-  height: 50%;
-  width: 100%;
-  display: flex;
- 
-}
-
-.graph-wrapper-right {
-  flex: 1 0 auto;
-  height: 250px;
-}
 
 }
